Projects/2021lab/k8s_helm_dev/k8s_tmp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      name: hello-nginx
  template:
    metadata:
      labels:
        name: hello-nginx
    spec:
      volumes:
        - name: index
          configMap:
            name: index
      containers:
        - name: hello-nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: index
              mountPath: /usr/share/nginx/html
