Projects/2021lab/k8s_helm_dev/k8s_tmp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: hello-nginx
